<resources>
    <string name="app_name">TAI</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="search_title">Search..</string>
    <string name="search_hint">Search topics..</string>
    <string name="no_internet">Connect to Internet!</string>

    <string name="login">Login</string>
    <string name="signUp">Sign Up</string>
    <string name="password">Password</string>
    <string name="name">Name</string>
    <string name="user_name">\u0020  \u0020User Name</string>
    <string name="mail">\u0020 \u0020Email</string>
    <string name="about_me">\u0020 \u0020 About</string>
    <string name="contact">Contact</string>

    <string name="courses">Courses</string>
    <string name="tests">Tests</string>
    <string name="analytics">Analytics</string>

    <string name="study_section">STUDY SECTION</string>
    <string name="fun_section">FUN SECTION</string>
    <string name="editors_pick">EDITOR\'S PICK</string>


    <string name="forgot_psswd_txt">Temporary password will be sent to your registred email using which you can create a new password.</string>
</resources>
